--- a/nbs/client/core.ipynb
+++ b/nbs/client/core.ipynb
@@ -466,6 +466,10 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
