updated get source code for ddx

--- a/nbs/client/core.ipynb
+++ b/nbs/client/core.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
     "import json\n",
     "import requests\n",
     "import time\n",
-    "\n",
+    "from copy import deepcopy\n",
     "from pprint import pprint\n",
     "\n",
     "import mbison.utils as dmut\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,12 +104,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## handling authentication"
+    "## handling authentication\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,14 +244,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'id': 1893952720, 'invitorUserId': 587894148, 'displayName': 'Jae Wilson1', 'department': 'Business Improvement', 'userName': 'jae@onyxreporting.com', 'emailAddress': 'jae@datacrew.space', 'avatarKey': 'c605f478-0cd2-4451-9fd4-d82090b71e66', 'accepted': True, 'userType': 'USER', 'modified': 1721264727737, 'created': 1588960518, 'active': True, 'pending': False, 'anonymous': False, 'systemUser': False}\n"
+      "{'id': 1893952720, 'invitorUserId': 587894148, 'displayName': 'Jae Wilson1', 'department': 'Business Improvement', 'userName': 'jae@onyxreporting.com', 'emailAddress': 'jae@datacrew.space', 'avatarKey': 'c605f478-0cd2-4451-9fd4-d82090b71e66', 'accepted': True, 'userType': 'USER', 'modified': 1721847526952, 'created': 1588960518, 'active': True, 'pending': False, 'anonymous': False, 'systemUser': False}\n"
      ]
     },
     {
@@ -260,7 +260,7 @@
        "DomoAuth(domo_instance='domo-community', username='jae@datacrew.space')"
       ]
      },
-     "execution_count": null,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,12 +279,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## sending requests"
+    "## sending requests\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,6 +301,28 @@
     "        super().__init__(message)\n",
     "\n",
     "\n",
+    "class Class_Exception(Exception):\n",
+    "\n",
+    "    def __init__(self, cls, auth=None, message: str = None):\n",
+    "        cls_instance = cls\n",
+    "\n",
+    "        if hasattr(cls, \"__cls__\"):\n",
+    "            cls_instance = cls\n",
+    "            cls = cls.__cls__\n",
+    "\n",
+    "        domo_instance = {\n",
+    "            (cls_instance and cls_instance.auth.domo_instance)\n",
+    "            or (auth and auth.domo_instance)\n",
+    "        }\n",
+    "\n",
+    "        message = f\"{message or 'error'} || {cls.__name__}\"\n",
+    "\n",
+    "        if domo_instance:\n",
+    "            message = f\"{message} || {domo_instance}\"\n",
+    "\n",
+    "        super().__init__(message)\n",
+    "\n",
+    "\n",
     "@dataclass\n",
     "class ResponseGetData:\n",
     "    auth: DomoAuth = field(repr=False)\n",
@@ -311,12 +333,27 @@
     "\n",
     "    @classmethod\n",
     "    def from_response(cls, res, auth: DomoAuth):\n",
-    "        return cls(\n",
-    "            response=json.loads(res.text),\n",
-    "            is_success=res.ok,\n",
-    "            status=res.status_code,\n",
-    "            auth=auth,\n",
-    "        )\n",
+    "\n",
+    "        try:\n",
+    "            if res.text == \"\" or not res.text:\n",
+    "                return cls(\n",
+    "                    response=res.text,\n",
+    "                    is_success=res.ok,\n",
+    "                    status=res.status_code,\n",
+    "                    auth=auth,\n",
+    "                )\n",
+    "\n",
+    "            return cls(\n",
+    "                response=json.loads(res.text),\n",
+    "                is_success=res.ok,\n",
+    "                status=res.status_code,\n",
+    "                auth=auth,\n",
+    "            )\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            print({\"rgd.from_response\": {\"text\": res.text, \"err\": e}})\n",
+    "\n",
+    "            raise e\n",
     "\n",
     "    @staticmethod\n",
     "    def _write_stream(res: requests.Response, file_path: str, stream_chunks=8192):\n",
@@ -331,16 +368,15 @@
     "        return True\n",
     "\n",
     "    @staticmethod\n",
-    "    def read_stream(download_path ):\n",
-    "        with open(download_path , \"rb\") as f:\n",
+    "    def read_stream(download_path):\n",
+    "        with open(download_path, \"rb\") as f:\n",
     "            return f.read()\n",
     "\n",
     "    @classmethod\n",
     "    def from_stream(cls, res: requests.Response, download_path: str, auth: DomoAuth):\n",
     "\n",
     "        if not res.ok:\n",
-    "            return cls.from_response(res = res ,auth = auth)\n",
-    "\n",
+    "            return cls.from_response(res=res, auth=auth)\n",
     "\n",
     "        cls._write_stream(res, download_path)\n",
     "\n",
@@ -349,19 +385,18 @@
     "            is_success=res.ok,\n",
     "            status=res.status_code,\n",
     "            auth=auth,\n",
-    "            download_path = download_path\n",
-    "        )\n",
-    "\n",
-    "\n"
+    "            download_path=download_path,\n",
+    "        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# | exports\n",
+    "\n",
     "\n",
     "def domo_api_request(\n",
     "    auth: DomoAuth,\n",
@@ -383,19 +418,21 @@
     "\n",
     "    if debug_api:\n",
     "\n",
-    "        print(\"debugging domo_api_request\")\n",
-    "\n",
+    "        print(\"🐛 debugging domo_api_request\")\n",
     "        pprint(\n",
     "            {\n",
     "                \"url\": url,\n",
     "                \"headers\": headers,\n",
     "                \"request_type\": request_type,\n",
     "                \"params\": params,\n",
+    "                \"body\": body,\n",
     "            }\n",
     "        )\n",
     "\n",
     "    if request_type.lower() == \"post\":\n",
-    "        response = requests.post(url, json=body, headers=headers, timeout=timeout)\n",
+    "        response = requests.post(\n",
+    "            url, json=body, headers=headers, params=params, timeout=timeout\n",
+    "        )\n",
     "\n",
     "    elif request_type.lower() == \"get\":\n",
     "        response = requests.get(url, headers=headers, params=params, timeout=timeout)\n",
@@ -408,7 +445,110 @@
     "    if return_raw:\n",
     "        return response\n",
     "\n",
-    "    return ResponseGetData.from_response(res=response, auth=auth)\n",
+    "    return ResponseGetData.from_response(res=response, auth=auth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | exports\n",
+    "\n",
+    "looper_offset_params = {\n",
+    "    \"offset\": \"offset\",\n",
+    "    \"limit\": \"limit\",\n",
+    "}  # what are the offset parameters called that handle pagination?\n",
+    "\n",
+    "\n",
+    "def looper(\n",
+    "    auth: DomoAuth,\n",
+    "    arr_fn: Callable,\n",
+    "    endpoint: str,\n",
+    "    request_type=\"GET\",\n",
+    "    params: dict = None,\n",
+    "    body: dict = None,\n",
+    "    offset=0,\n",
+    "    limit=50,\n",
+    "    offset_params: dict = None,  # format {\"offset\" : <<value>> , \"limit\" : <<value>>}\n",
+    "    offset_params_is_header: bool = False,  # should offset parameters be passed in the header or body?\n",
+    "    debug_api: bool = False,\n",
+    "    debug_loop: bool = False,\n",
+    "    return_raw: bool = False,  # will break the looper after the first request and ignore the array processing step.\n",
+    "):\n",
+    "    params = params or {}\n",
+    "    body = body or {}\n",
+    "    offset_params = offset_params or looper_offset_params\n",
+    "\n",
+    "    final_array = []\n",
+    "    keep_looping = True\n",
+    "\n",
+    "    while keep_looping:\n",
+    "        new_offset = {\n",
+    "            offset_params[\"offset\"]: offset,\n",
+    "            offset_params[\"limit\"]: limit,\n",
+    "        }\n",
+    "        if offset_params_is_header:\n",
+    "            params = deepcopy({**params, **new_offset})\n",
+    "\n",
+    "        else:\n",
+    "            body = {**body, **new_offset}\n",
+    "\n",
+    "        res = domo_api_request(\n",
+    "            auth=auth,\n",
+    "            endpoint=endpoint,\n",
+    "            request_type=request_type,\n",
+    "            params=params,\n",
+    "            debug_api=debug_api,\n",
+    "            body=body,\n",
+    "        )\n",
+    "\n",
+    "        if res.status == 429:\n",
+    "            print(\"sleeping in timeout\")\n",
+    "            time.sleep(10)\n",
+    "            debug_loop = True\n",
+    "            keep_looping = True\n",
+    "\n",
+    "        elif not res.is_success or return_raw:\n",
+    "            return res\n",
+    "\n",
+    "        else:\n",
+    "            new_array = arr_fn(res)\n",
+    "\n",
+    "            if debug_loop:\n",
+    "                pprint(\"🔁 debug_loop\")\n",
+    "                pprint(\n",
+    "                    {\n",
+    "                        \"params\": params,\n",
+    "                        \"body\": body,\n",
+    "                        # \"new_array\": new_array[0:1]\n",
+    "                    }\n",
+    "                )\n",
+    "\n",
+    "            if not new_array or len(new_array) == 0:\n",
+    "                keep_looping = False\n",
+    "\n",
+    "            if len(new_array) < limit:\n",
+    "                keep_looping = False\n",
+    "\n",
+    "            final_array += new_array\n",
+    "\n",
+    "            offset += limit\n",
+    "\n",
+    "    res.response = final_array\n",
+    "\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | exports\n",
+    "\n",
     "\n",
     "def domo_api_stream_request(\n",
     "    auth: DomoAuth,\n",
@@ -452,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +608,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.9"
   }
  },
