--- a/nbs/feature/enterprise_apps.ipynb
+++ b/nbs/feature/enterprise_apps.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "04e1bcd0",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bb167788",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "aab054f1",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "18c9ba66",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "47c2d895",
    "metadata": {},
    "outputs": [],
@@ -101,12 +101,15 @@
     "        debug_api=debug_api,\n",
     "    )\n",
     "\n",
+    "    if not res.is_success:\n",
+    "        raise App_API_Exception(res = res, message =\"is app shared with authenticated user?\")\n",
+    "\n",
     "    return res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4b232eda",
    "metadata": {},
    "outputs": [
@@ -132,7 +135,7 @@
        " 'hasThumbnail': None}"
       ]
      },
-     "execution_count": null,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "37790881",
    "metadata": {},
    "outputs": [],
@@ -162,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8134bfbe",
    "metadata": {},
    "outputs": [
@@ -172,7 +175,7 @@
        "['1.0.0']"
       ]
      },
-     "execution_count": null,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4bb721b8",
    "metadata": {},
    "outputs": [],
@@ -224,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "82357a02",
    "metadata": {},
    "outputs": [
@@ -248,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "2401f5b9",
    "metadata": {},
    "outputs": [],
@@ -280,6 +283,68 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "f9998699",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_app_permissions(design_id, auth : dmda.DomoAuth, debug_api: bool = False):\n",
+    "    endpoint = f'/api/apps/v1/designs/{design_id}/permissions'\n",
+    "\n",
+    "    res = dmda.domo_api_request(\n",
+    "        endpoint=endpoint,\n",
+    "        request_type=\"get\",\n",
+    "        auth=auth,\n",
+    "        debug_api=debug_api,\n",
+    "    )\n",
+    "\n",
+    "    if not res.is_success:\n",
+    "        raise App_API_Exception(res = res)\n",
+    "    \n",
+    "    return res\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a34db6a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "App_API_Exception",
+     "evalue": " || 404 - No static resource api/apps/v1/designs/aace1266-dc7f-42cb-8595-46069d91a703/permissions. || domo-community",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mApp_API_Exception\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[21], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m design_id \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124maace1266-dc7f-42cb-8595-46069d91a703\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m----> 3\u001b[0m \u001b[43mget_app_permissions\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdesign_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mdesign_id\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43mauth\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mauth\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[20], line 12\u001b[0m, in \u001b[0;36mget_app_permissions\u001b[1;34m(design_id, auth, debug_api)\u001b[0m\n\u001b[0;32m      4\u001b[0m res \u001b[38;5;241m=\u001b[39m dmda\u001b[38;5;241m.\u001b[39mdomo_api_request(\n\u001b[0;32m      5\u001b[0m     endpoint\u001b[38;5;241m=\u001b[39mendpoint,\n\u001b[0;32m      6\u001b[0m     request_type\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mget\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m      7\u001b[0m     auth\u001b[38;5;241m=\u001b[39mauth,\n\u001b[0;32m      8\u001b[0m     debug_api\u001b[38;5;241m=\u001b[39mdebug_api,\n\u001b[0;32m      9\u001b[0m )\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m res\u001b[38;5;241m.\u001b[39mis_success:\n\u001b[1;32m---> 12\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m App_API_Exception(res \u001b[38;5;241m=\u001b[39m res)\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m res\n",
+      "\u001b[1;31mApp_API_Exception\u001b[0m:  || 404 - No static resource api/apps/v1/designs/aace1266-dc7f-42cb-8595-46069d91a703/permissions. || domo-community"
+     ]
+    }
+   ],
+   "source": [
+    "design_id = 'aace1266-dc7f-42cb-8595-46069d91a703'\n",
+    "\n",
+    "get_app_permissions(\n",
+    "    design_id= design_id,\n",
+    "    auth = auth\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "760f08a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def share_app(auth : dm):\n",
+    "url = 'https://domo-community.domo.com/api/apps/v1/designs/dde86741-c198-4b9e-8686-cc60f8dfd5be/permissions/ADMIN'\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f8e084a2",
    "metadata": {},
@@ -289,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "813a3d86",
    "metadata": {},
    "outputs": [],
@@ -315,7 +380,7 @@
     "        domo_user = None\n",
     "\n",
     "        try:\n",
-    "            if obj[\"owner\"]:\n",
+    "            if obj.get(\"owner\"):\n",
     "                domo_user = dmdu.DomoUser.get_by_id(\n",
     "                    user_id=obj[\"owner\"], auth=auth, debug_api=debug_api\n",
     "                )\n",
@@ -384,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "0caec1c4",
    "metadata": {},
    "outputs": [
@@ -394,7 +459,7 @@
        "DomoEnterpriseApp(id='8c16c8ab-c068-4110-940b-f738d7146efc', name='nbdev_documentation', owner=DomoUser(id=1893952720, display_name='Jae Wilson1', role_id=810756122, email='jae@datacrew.space'), created_dt='2022-12-02T17:26:03Z', lastmodified_dt='2022-12-02T17:39:38Z', versions=['1.0.0'], current_version='1.0.0', referencing_cards=[])"
       ]
      },
-     "execution_count": null,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a0766782",
    "metadata": {},
    "outputs": [
@@ -424,10 +489,10 @@
     {
      "data": {
       "text/plain": [
-       "ResponseGetData(response=True, is_success=True, status=200, download_path='../../TEST/8c16c8ab-c068-4110-940b-f738d7146efc - 1.0.0.zip')"
+       "ResponseGetData(response=True, is_success=True, status=200, download_path='..\\\\..\\\\TEST\\\\8c16c8ab-c068-4110-940b-f738d7146efc - 1.0.0.zip')"
       ]
      },
-     "execution_count": null,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "a8066834",
    "metadata": {},
    "outputs": [],
@@ -462,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "661f7bc6",
    "metadata": {},
    "outputs": [
@@ -476,7 +541,7 @@
        " DomoEnterpriseApp(id='c5aa00cc-8c6b-4571-a5cf-6ae5ddcf56a8', name='sugarforce', owner=DomoUser(id=1141078945, display_name='Justin Pumford', role_id=2097317660, email='jpumford@gmail.com'), created_dt='2021-04-14T02:59:48Z', lastmodified_dt='2021-04-14T02:59:49Z', versions=[], current_version='0.1.0', referencing_cards=[])]"
       ]
      },
-     "execution_count": null,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "137bb299-2030-4854-9b74-3619d780cf2c",
    "metadata": {},
    "outputs": [],
@@ -503,6 +568,18 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
