--- a/nbs/client/utils.ipynb
+++ b/nbs/client/utils.ipynb
@@ -12,12 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#| default_exp client.utils"
@@ -25,12 +21,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#| exporti\n",
@@ -40,17 +32,14 @@
     "\n",
     "import zipfile\n",
     "import io\n",
-    "import datetime as dt"
+    "import datetime as dt\n",
+    "import dateutil"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#| hide\n",
@@ -59,12 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# | exports\n",
@@ -87,12 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#| export \n",
@@ -120,12 +101,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# | export\n",
@@ -153,29 +130,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#| exports\n",
     "def convert_string_to_datetime(datestr: str) -> dt.datetime:\n",
     "    if not datestr:\n",
     "        return None\n",
-    "    return parser.parse(datestr)"
+    "    return dateutil.parser.parse(datestr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#| hide\n",
@@ -189,6 +158,18 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
