updated get source code for ddx

--- a/nbs/feature/enterprise_apps.ipynb
+++ b/nbs/feature/enterprise_apps.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "2401f5b9",
    "metadata": {},
    "outputs": [],
@@ -284,7 +284,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
+   "id": "c173b572",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 'e09d6625-3680-4fac-bc71-1cd81607eb9a',\n",
+       "  'name': 'YouTubeViewer Demographic',\n",
+       "  'owner': None,\n",
+       "  'createdBy': None,\n",
+       "  'createdDate': '2016-07-19T22:10:36Z',\n",
+       "  'updatedBy': None,\n",
+       "  'updatedDate': '2016-09-20T21:41:39Z',\n",
+       "  'description': None,\n",
+       "  'versions': [],\n",
+       "  'latestVersion': '1.0.7',\n",
+       "  'instances': [],\n",
+       "  'referencingCards': [],\n",
+       "  'owners': [],\n",
+       "  'creator': None,\n",
+       "  'deletedDate': None,\n",
+       "  'trusted': False,\n",
+       "  'hasThumbnail': None}]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = get_all_apps(auth = auth)\n",
+    "all_apps = res.response\n",
+    "\n",
+    "print(len(all_apps))\n",
+    "all_apps[0:1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "f9998699",
    "metadata": {},
    "outputs": [],
@@ -307,35 +355,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "id": "a34db6a6",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "App_API_Exception",
-     "evalue": " || 404 - No static resource api/apps/v1/designs/aace1266-dc7f-42cb-8595-46069d91a703/permissions. || domo-community",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mApp_API_Exception\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[21], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m design_id \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124maace1266-dc7f-42cb-8595-46069d91a703\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m----> 3\u001b[0m \u001b[43mget_app_permissions\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdesign_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mdesign_id\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43mauth\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mauth\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[20], line 12\u001b[0m, in \u001b[0;36mget_app_permissions\u001b[1;34m(design_id, auth, debug_api)\u001b[0m\n\u001b[0;32m      4\u001b[0m res \u001b[38;5;241m=\u001b[39m dmda\u001b[38;5;241m.\u001b[39mdomo_api_request(\n\u001b[0;32m      5\u001b[0m     endpoint\u001b[38;5;241m=\u001b[39mendpoint,\n\u001b[0;32m      6\u001b[0m     request_type\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mget\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m      7\u001b[0m     auth\u001b[38;5;241m=\u001b[39mauth,\n\u001b[0;32m      8\u001b[0m     debug_api\u001b[38;5;241m=\u001b[39mdebug_api,\n\u001b[0;32m      9\u001b[0m )\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m res\u001b[38;5;241m.\u001b[39mis_success:\n\u001b[1;32m---> 12\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m App_API_Exception(res \u001b[38;5;241m=\u001b[39m res)\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m res\n",
-      "\u001b[1;31mApp_API_Exception\u001b[0m:  || 404 - No static resource api/apps/v1/designs/aace1266-dc7f-42cb-8595-46069d91a703/permissions. || domo-community"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "design_id = 'aace1266-dc7f-42cb-8595-46069d91a703'\n",
     "\n",
-    "get_app_permissions(\n",
-    "    design_id= design_id,\n",
-    "    auth = auth\n",
-    ")"
+    "# get_app_permissions(\n",
+    "#     design_id= design_id,\n",
+    "#     auth = auth,\n",
+    "#     debug_api= True\n",
+    "# )\n",
+    "\n",
+    "next((app for app in all_apps if app['id'] == design_id), None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "760f08a4",
    "metadata": {},
    "outputs": [],
@@ -354,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "813a3d86",
    "metadata": {},
    "outputs": [],
@@ -449,21 +487,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "0caec1c4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DomoEnterpriseApp(id='8c16c8ab-c068-4110-940b-f738d7146efc', name='nbdev_documentation', owner=DomoUser(id=1893952720, display_name='Jae Wilson1', role_id=810756122, email='jae@datacrew.space'), created_dt='2022-12-02T17:26:03Z', lastmodified_dt='2022-12-02T17:39:38Z', versions=['1.0.0'], current_version='1.0.0', referencing_cards=[])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# design_id = '897f9ffc-1ce2-4247-94d3-7afcb0192abb'\n",
     "domo_app = DomoEnterpriseApp.get_by_id(design_id = design_id, auth = auth)\n",
@@ -475,35 +502,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "a0766782",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done writing stream\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "ResponseGetData(response=True, is_success=True, status=200, download_path='..\\\\..\\\\TEST\\\\8c16c8ab-c068-4110-940b-f738d7146efc - 1.0.0.zip')"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "domo_app.get_source_code(download_folder='../../TEST')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "a8066834",
    "metadata": {},
    "outputs": [],
@@ -527,32 +536,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "661f7bc6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[DomoEnterpriseApp(id='e09d6625-3680-4fac-bc71-1cd81607eb9a', name='YouTubeViewer Demographic', owner=None, created_dt='2016-07-19T22:10:36Z', lastmodified_dt='2016-09-20T21:41:39Z', versions=[], current_version='1.0.7', referencing_cards=[]),\n",
-       " DomoEnterpriseApp(id='f0b9f8b5-3dac-43c1-8e6e-fe2a7c8e248e', name='iframeApp', owner=None, created_dt='2018-04-24T21:41:02Z', lastmodified_dt='2018-04-24T21:41:02Z', versions=[], current_version='1.0.0', referencing_cards=[]),\n",
-       " DomoEnterpriseApp(id='e2fca4a6-f099-4bba-8163-1b88fb53d427', name='Inline Editing', owner=None, created_dt='2020-11-17T20:16:32Z', lastmodified_dt='2023-10-03T18:58:42Z', versions=[], current_version='5.1.4', referencing_cards=[]),\n",
-       " DomoEnterpriseApp(id='883bec29-4d9c-4caf-b144-9b3a6d07a001', name='form-builder-master', owner=None, created_dt='2019-12-05T23:18:19Z', lastmodified_dt='2024-07-08T16:37:47Z', versions=[], current_version='3.2.7', referencing_cards=[]),\n",
-       " DomoEnterpriseApp(id='c5aa00cc-8c6b-4571-a5cf-6ae5ddcf56a8', name='sugarforce', owner=DomoUser(id=1141078945, display_name='Justin Pumford', role_id=2097317660, email='jpumford@gmail.com'), created_dt='2021-04-14T02:59:48Z', lastmodified_dt='2021-04-14T02:59:49Z', versions=[], current_version='0.1.0', referencing_cards=[])]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "DomoEnterpriseApps(auth = auth).get_apps(debug_api = False, return_raw = False)[0:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "137bb299-2030-4854-9b74-3619d780cf2c",
    "metadata": {},
    "outputs": [],
