--- a/nbs/implementation/monitor_1_app.ipynb
+++ b/nbs/implementation/monitor_1_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,6 +49,8 @@
     "import mbison.client.core as dmda\n",
     "import mbison.feature.users as dmdu\n",
     "\n",
+    "import mbison.feature.appdb as dmdb\n",
+    "import mbison.feature.cards as dmdc\n",
     "import mbison.feature.codeengine as dmce\n",
     "import mbison.feature.enterprise_apps as dmap\n",
     "\n",
@@ -57,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,15 +72,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DomoAuth(domo_instance='domo-community', username=None)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "auth = dmda.DomoAuth(\n",
     "    domo_instance=os.environ[\"DOMO_INSTANCE\"],\n",
     "    access_token=os.environ[\"DOMO_ACCESS_TOKEN\"],\n",
     ")\n",
     "auth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "card_id = '577316875'\n",
+    "\n",
+    "query = {\n",
+    "        \"includeCardTypeClause\": True,\n",
+    "        \"cardTypes\": [\"domoapp\",\n",
+    "                      \"mason\",\"custom\"\n",
+    "                      ],\n",
+    "        \"ascending\": True,\n",
+    "        \"orderBy\": \"cardTitle\",\n",
+    "    }\n",
+    "\n",
+    "# res = search_cards(auth = auth, query = query)\n",
+    "# cards = res.response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': '3ed44deb-ce70-4e88-9fc7-985cb7f21435',\n",
+       " 'datastoreId': 'c3314265-965a-46b2-9e21-5ad27fd1101b',\n",
+       " 'collectionId': '475cc3b8-4318-406a-8070-c023bf0b9152',\n",
+       " 'syncRequired': True,\n",
+       " 'owner': '1893952720',\n",
+       " 'createdBy': '1893952720',\n",
+       " 'createdOn': '2023-05-05T21:54:30.178Z',\n",
+       " 'updatedOn': '2023-11-02T15:18:02.629Z',\n",
+       " 'updatedBy': '1893952720',\n",
+       " 'content': {'htmlBlank': {'js': \"// DDX Bricks Wiki - See https://developer.domo.com/docs/ddx-bricks/getting-started-using-ddx-bricks\\n// for tips on getting started, linking to Domo data and debugging your app\\n \\n//Available globals\\nvar domo = window.domo; // For more on domo.js: https://developer.domo.com/docs/dev-studio-guides/domo-js#domo.get\\nvar datasets = window.datasets;\\n\\n//Step 1. Select your dataset(s) from the button in the bottom left corner\\n\\n\\n\\n//Step 2. Query your dataset(s): https://developer.domo.com/docs/dev-studio-references/data-api\\nvar fields = ['state', 'revenue'];\\nvar groupby = ['state'];\\nvar query = `/data/v1/${datasets[0]}?fields=${fields.join()}&groupby=${groupby.join()}`;\\ndomo.get(query).then(handleResult);\\n\\n\\n\\n//Step 3. Do something with the data from the query result\\nfunction handleResult(data){\\n  console && console.log(data);\\n}\",\n",
+       "   'html': '',\n",
+       "   'css': ''}}}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import mbison.feature.cards as dmac\n",
+    "import mbison.feature.appdb as dmdb\n",
+    "\n",
+    "\n",
+    "def get_source_code(card_id, auth, debug_api : bool = False):\n",
+    "\n",
+    "    res = dmac.get_card_by_id(card_id = card_id, auth = auth, debug_api= debug_api)\n",
+    "    \n",
+    "    datastore_id = res.response['domoapp']['id']\n",
+    "    datastore_id\n",
+    "\n",
+    "    res = dmdb.get_collections(auth=auth, debug_api= debug_api,\n",
+    "                    datastore_id= datastore_id\n",
+    "                    )\n",
+    "    collection = res.response[0]\n",
+    "    \n",
+    "    res = dmdb.query_collection_documents(auth=auth,\n",
+    "                                debug_api= debug_api,\n",
+    "                                collection_id = collection['id'],query = {}\n",
+    "                                )\n",
+    "    \n",
+    "    documents = res.response\n",
+    "    documents\n",
+    "\n",
+    "    return documents[0]\n",
+    "    \n",
+    "get_source_code(card_id = card_id, auth = auth, debug_api = False)"
    ]
   },
   {
@@ -312,6 +403,18 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
